[gd_scene load_steps=13 format=3 uid="uid://bvyohgkx2hf8e"]

[ext_resource type="Script" uid="uid://b321uohv7p1a5" path="res://scripts/ui/popup.gd" id="1_3ig0g"]
[ext_resource type="Texture2D" uid="uid://dj3gk201swrh5" path="res://assets/ui/copy.png" id="2_xa8wr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgflf"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.72549)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ig0g"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.572549)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t3245"]

[sub_resource type="Theme" id="Theme_murnt"]
RichTextLabel/styles/focus = SubResource("StyleBoxEmpty_t3245")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bkncm"]

[sub_resource type="Theme" id="Theme_bkncm"]
Button/constants/icon_max_width = 70
Button/styles/normal = SubResource("StyleBoxEmpty_bkncm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xa8wr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3245"]
bg_color = Color(0.737193, 0.737193, 0.737193, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkncm"]
bg_color = Color(0.577008, 0.577008, 0.577008, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_murnt"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(3, 3)

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ig0g")

[node name="PopupPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -459.5
offset_top = -169.0
offset_right = 459.5
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fgflf")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 48
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="PanelContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3ig0g")

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer/Panel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/MarginContainer/VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 70

[node name="Text" type="RichTextLabel" parent="PopupPanel/MarginContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme = SubResource("Theme_murnt")
theme_override_colors/selection_color = Color(0.419813, 0.419813, 0.419813, 0.933333)
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "test"
context_menu_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
selection_enabled = true

[node name="CopyBtn" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_bkncm")
icon = ExtResource("2_xa8wr")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.51

[node name="Button" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xa8wr")
theme_override_styles/hover = SubResource("StyleBoxFlat_t3245")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkncm")
theme_override_styles/normal = SubResource("StyleBoxFlat_murnt")
text = "OK"

[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/Panel/HBoxContainer/CopyBtn" to="." method="_on_copy_btn_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
